# ebsl-ids

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binomial_opinion.py  dummy_model.py  ebsl.py  proof_of_concept.py  pyproject.toml  remove_nb_metadata.sh  subjective_logic.c  subjective_logic.h  subjective_logic.py  test_logic.py  utility.py
.github/workflows/: wheels.yml
PoC/: conflict_demo.py
docs/: Doxyfile  README.md
examples/: binomial_opinions.py  dummy_model.py
python/ebsl/: ebsl_pywrapper.py
src/: binomial_opinion.cpp  binomial_opinion.h  bsl_sm.cpp  bsl_sm.h  ebsl.cpp  ebsl.h
src/ebsl/: __init__.py
src/original_python/: binomial_opinion.py
