[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.9"]
build-backend = "scikit_build_core.build"

[project]
name = "ebsl"
version = "0.0.1"
description = "The ensemble binomial subjective logic framework"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ahmad Ismail", email = "a.h.ismail.dev@gmail.com" },
]
classifiers = [
    "License :: MPL-2",
]

dependencies = [ "scikit-learn >= 1.4.0", "numpy >= 2.0", "pandas" ]

[project.urls]
Homepage = "https://github.com/a-h-ismail/ebsl"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Todo: Add some tests to run

# Needed for some C++20 support on macOS
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "13.3"

skip = ["cp38-*", "pp38-*"] # Skip CPython and PyPy 3.8
archs = ["auto64"]          # Only target 64 bit architectures